--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: my-app:latest
     build: .
     environment:
-      - DISPLAY=192.168.2.101:0.0
+      - DISPLAY=waiesunacBookea:0.0
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
     network_mode: host
